--- a/src/app.less
+++ b/src/app.less
@@ -1,3 +1,17 @@
-Page{
+Page {
     background-color: #f2f2f2;
+}
+
+.title {
+    color: #000;
+    font-size: 30rpx;
+    padding: 10rpx 0;
+}
+
+.article {
+    color: #666;
+    font-size: 26rpx;
+    line-height: 30rpx;
+    white-space: 2;
+    padding: 10rpx 0;
 }
