--- a/src/components/codeHtml/index.less
+++ b/src/components/codeHtml/index.less
@@ -1,5 +1,5 @@
 .code_box {
-    width: 670rpx;
+    width: 640rpx;
     height: auto;
     margin: auto;
     background-color: #1e1e1e;
@@ -31,8 +31,9 @@
 
     .rich_text {
         color: #fff;
-        width: 670rpx;
+        width: 640rpx;
         overflow-x: scroll;
+        overflow-y: scroll;
         padding-bottom: 40rpx;
     }
 }
